...
    <string name="core_version">Core version</string>
    <string name="core_platform">Architecture: %1$s</string>
    <string name="core_release">Release page</string>
    <string name="field_disabled">Disabled</string>
    <string name="field_active">Enabled</string>
    <string name="legacy_resource">Legacy resource</string>
    <string name="vpn_start">Start VPN</string>
    <string name="vpn_stop">Stop VPN</string>
    <string name="vpn_permission">VPN permission was not granted</string>
    <string name="subscription_usage">%1$s / %2$s</string>
    <string name="subscription_expiry">Expires: %1$s</string>
    <string name="selector_current">Current: %1$s</string>
    <string name="pending_restart">Changes pending restart</string>
...
